@@ -115,7 +115,7 @@ Turn on Atari BASIC ROM
 .BI \-cart\  filename
 Insert cartridge (CART or raw format)
 .TP
-.BR "\-cart\-type 0" .. 47
+.BR "\-cart\-type 0" .. 49
 Select type of the cartridge inserted with the \fB\-cart\fR option.
 When inserting a raw ROM image its type cannot be detected automaticcaly,
 and must be provided with this option.
@@ -264,6 +264,12 @@ Blizzard 4 KB cartridge
 .TP
 .B 47
 AST 32 KB cartridge
+.TP
+.B 48
+Atrax SDX 64 KB cartridge
+.TP
+.B 49
+Atrax SDX 128 KB cartridge
 .PD
 .RE
 If this option is not given, the user will be asked to choose the cartridge
@@ -274,7 +280,7 @@ Insert piggyback cartridge (CART or raw format).
 This works only if the first cartridge is a pass-through (currently only
 SpartaDOS X 64KB and 128KB types).
 .TP
-.BR "\-cart2\-type 0" .. 47
+.BR "\-cart2\-type 0" .. 49
 Select type of the cartridge inserted with the \fB-cart2\fR option.
 When inserting a raw ROM image its type cannot be detected automatically,
 and must be provided with this option.
