@@ -53,7 +53,9 @@ enum { CARTRIDGE_UNKNOWN        = -1,
        CARTRIDGE_OSS_043M_16    = 45,
        CARTRIDGE_BLIZZARD_4     = 46,
        CARTRIDGE_AST_32         = 47,
-       CARTRIDGE_LAST_SUPPORTED = 47
+       CARTRIDGE_ATRAX_SDX_64   = 48,
+       CARTRIDGE_ATRAX_SDX_128  = 49,
+       CARTRIDGE_LAST_SUPPORTED = 49
 };
 
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
